Add fine endpoint

--- a/apps/mooc/backend/config/services_test.yaml
+++ b/apps/mooc/backend/config/services_test.yaml
@@ -10,3 +10,5 @@ services:
     resource: '../../../../tests/src'
 
   CodelyTv\Shared\Domain\RandomNumberGenerator: '@CodelyTv\Tests\Shared\Infrastructure\ConstantRandomNumberGenerator'
+
+  CodelyTv\Shared\Domain\CurrentTime: '@CodelyTv\Tests\Shared\Infrastructure\ConstantCurrentTime'
