--- a/etc/infrastructure/php/conf.d/xdebug.ini
+++ b/etc/infrastructure/php/conf.d/xdebug.ini
@@ -1,14 +1,11 @@
 zend_extension=xdebug.so
 
-;Debugging
-xdebug.remote_enable = 1;
-xdebug.remote_connect_back = 1;
-xdebug.remote_autostart = 1;
-xdebug.remote_port = 9001;
-
-;Profiling
-xdebug.profiler_enable = 0;
-xdebug.profiler_enable_trigger = 1;
-xdebug.profiler_output_dir = "/tmp/xdebug";
-
-xdebug.max_nesting_level = 500;
+xdebug.idekey = PHPSTORM
+xdebug.mode = off
+xdebug.discover_client_host = false
+xdebug.start_with_request = trigger
+xdebug.trigger_value = DEBUG
+xdebug.client_host = host.docker.internal
+xdebug.client_port = 9003
+xdebug.cli_color= 1
+xdebug.output_dir = /tmp/debug
