Add Eloquent implementation

--- a/apps/mooc/backend/config/services_test.yaml
+++ b/apps/mooc/backend/config/services_test.yaml
@@ -12,3 +12,13 @@ services:
   CodelyTv\Shared\Domain\RandomNumberGenerator: '@CodelyTv\Tests\Shared\Infrastructure\ConstantRandomNumberGenerator'
 
   CodelyTv\Shared\Domain\CurrentTime: '@CodelyTv\Tests\Shared\Infrastructure\ConstantCurrentTime'
+
+wouterj_eloquent:
+  driver:   mysql
+  host:     '%env(MOOC_DATABASE_HOST)%'
+  port:     '%env(MOOC_DATABASE_PORT)%'
+  database: '%env(MOOC_DATABASE_NAME)%'
+  username: '%env(MOOC_DATABASE_USER)%'
+  password: '%env(MOOC_DATABASE_PASSWORD)%'
+  prefix:   ~
+  eloquent: ~
