--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "lambdish/phunctional": "^1.0",
     "ramsey/uuid": "^4.1",
     "doctrine/orm": "^2.9",
-    "doctrine/dbal": "^2.13"
+    "doctrine/dbal": "^2.13",
+    "wouterj/eloquent-bundle": "^2.1"
   },
   "require-dev": {
     "ext-xdebug": "*",
