--- a/src/Mooc/Shared/Infrastructure/Symfony/DependencyInjection/mooc_services.yaml
+++ b/src/Mooc/Shared/Infrastructure/Symfony/DependencyInjection/mooc_services.yaml
@@ -1,4 +1,4 @@
 services:
 
   # Courses
-  CodelyTv\Mooc\Courses\Domain\CourseRepository: '@CodelyTv\Mooc\Courses\Infrastructure\Persistence\MySqlCourseRepository'
+  CodelyTv\Mooc\Courses\Domain\CourseRepository: '@CodelyTv\Mooc\Courses\Infrastructure\Persistence\MySqlEloquentCourseRepository'
