Add doctrine mapping

--- a/apps/mooc/backend/config/services.yaml
+++ b/apps/mooc/backend/config/services.yaml
@@ -19,6 +19,9 @@ services:
   CodelyTv\:
     resource: '../../../../src'
 
+  CodelyTv\Shared\Infrastructure\Doctrine\DatabaseConnections:
+    arguments: [!tagged codely.database_connection]
+
   CodelyTv\Shared\Infrastructure\Symfony\AddJsonBodyToRequestListener:
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
