Add sync domain event bus using Symfony Messenger

--- a/tests/apps/mooc/backend/mooc_backend.yml
+++ b/tests/apps/mooc/backend/mooc_backend.yml
@@ -26,6 +26,7 @@ mooc_backend:
     course:
       paths: [ tests/apps/mooc/backend/features/courses ]
       contexts:
+        - CodelyTv\Tests\Shared\Infrastructure\Behat\FeatureContext
         - CodelyTv\Tests\Shared\Infrastructure\Behat\ApiRequestContext
         - CodelyTv\Tests\Shared\Infrastructure\Behat\ApiResponseContext
 
