--- a/apps/mooc/backend/config/services.yaml
+++ b/apps/mooc/backend/config/services.yaml
@@ -7,6 +7,9 @@ services:
     autoconfigure: true
     autowire: true
 
+  _instanceof:
+    CodelyTv\Shared\Domain\Bus\DomainEventSubscriber:
+      tags: ['codely.domain_event_subscriber']
 
   CodelyTv\Apps\Mooc\Backend\Controller\:
     resource: '../src/Controller'
@@ -18,6 +21,9 @@ services:
 
   CodelyTv\:
     resource: '../../../../src'
+
+  CodelyTv\Shared\Infrastructure\Bus\Event\SymfonySyncEventBus:
+    arguments: [!tagged codely.domain_event_subscriber]
 
   CodelyTv\Shared\Infrastructure\Doctrine\DatabaseConnections:
     arguments: [!tagged codely.database_connection]
