--- a/apps/mooc/backend/config/services_test.yaml
+++ b/apps/mooc/backend/config/services_test.yaml
@@ -1,6 +1,16 @@
 framework:
   test: true
 
+wouterj_eloquent:
+  driver:   mysql
+  host:     '%env(MOOC_DATABASE_HOST)%'
+  port:     '%env(MOOC_DATABASE_PORT)%'
+  database: '%env(MOOC_DATABASE_NAME)%'
+  username: '%env(MOOC_DATABASE_USER)%'
+  password: '%env(MOOC_DATABASE_PASSWORD)%'
+  prefix:   ~
+  eloquent: ~
+
 services:
   _defaults:
     autoconfigure: true
@@ -13,12 +23,5 @@ services:
 
   CodelyTv\Shared\Domain\CurrentTime: '@CodelyTv\Tests\Shared\Infrastructure\ConstantCurrentTime'
 
-wouterj_eloquent:
-  driver:   mysql
-  host:     '%env(MOOC_DATABASE_HOST)%'
-  port:     '%env(MOOC_DATABASE_PORT)%'
-  database: '%env(MOOC_DATABASE_NAME)%'
-  username: '%env(MOOC_DATABASE_USER)%'
-  password: '%env(MOOC_DATABASE_PASSWORD)%'
-  prefix:   ~
-  eloquent: ~
+  CodelyTv\Tests\Shared\Infrastructure\Doctrine\DatabaseConnections:
+    arguments: [!tagged codely.database_connection]
