--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "ramsey/uuid": "^4.1",
     "doctrine/orm": "^2.9",
     "doctrine/dbal": "^2.13",
-    "wouterj/eloquent-bundle": "^2.1"
+    "wouterj/eloquent-bundle": "^2.1",
+    "symfony/messenger": "^5.3"
   },
   "require-dev": {
     "ext-xdebug": "*",
